--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,6 @@
     %sveltekit.head%
   </head>
   <body>
-    %sveltekit.body%
+    <div style="height: 100%">%sveltekit.body%</div>
   </body>
 </html>
