--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
     <meta name="viewport" content="width=device-width" initial-scale=1.0,
-    maximum-scale=1.0, user-scalable=no" /> %sveltekit.head%
+    maximum-scale=1.0, user-scalable=no" width=device-width" /> %sveltekit.head%
   </head>
   <body>
     <div style="height: 100%">%sveltekit.body%</div>
